Cleanup old classes, and fixed many complilation issues.